[gd_scene load_steps=9 format=3 uid="uid://bq8fbvk4hh7i8"]

[ext_resource type="Texture2D" uid="uid://8bgq0hh514tr" path="res://png/menu.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://cn2rsx3ioh5d4" path="res://scripts/main_menu.gd" id="1_7vrkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
modulate_color = Color(0.408329, 0.408329, 0.408329, 1)

[sub_resource type="Theme" id="Theme_fu7sn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.327727, 0.372786, 0.869087, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0.329307, 0.351309, 0.947501, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.197853, 0.436314, 0.875023, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe12f"]
bg_color = Color(0.667871, 0.0999334, 0.505118, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -571.5
offset_top = -319.5
offset_right = 571.5
offset_bottom = 319.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -153.0
offset_right = 123.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fu7sn")
theme_override_constants/separation = 30

[node name="Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jix8l")
text = "Level1"

[node name="Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_glbon")
text = "Level2"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nlkkf")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_qe12f")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 297.0
offset_top = 112.0
offset_right = 891.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 47
text = "ASTRONAUT ADVENTURES"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
